--- a/templates/default/server.xml.erb
+++ b/templates/default/server.xml.erb
@@ -18,7 +18,8 @@
                    useBodyEncodingForURI="true"
                    compression="on"
                    compressableMimeType="text/html,text/xml,text/plain,text/css,application/json,application/javascript,application/x-javascript"
-                   redirectPort="<%= node['cookbook_confluence']['tomcat']['ssl_port'] %>"
+                   proxyName="<%= node['cookbook_confluence']['nginx']['virtual_host_alias'] %>"
+                   proxyPort="<%= node['cookbook_confluence']['nginx']['port'] %>"
         />
 
         <Connector port="<%= node['cookbook_confluence']['tomcat']['ssl_port'] %>"
@@ -43,7 +44,7 @@
 
         <Engine name="Standalone" defaultHost="localhost" debug="0">
             <Host name="localhost" debug="0" appBase="webapps" unpackWARs="true" autoDeploy="true">
-                <Context path="" docBase="../confluence" debug="0" reloadable="false" useHttpOnly="true">
+                <Context path="/confluence" docBase="../confluence" debug="0" reloadable="false" useHttpOnly="true">
                   <Manager pathname="" />
                 </Context>
             </Host>
