--- a/templates/default/nginx_vhost.conf.erb
+++ b/templates/default/nginx_vhost.conf.erb
@@ -1,3 +1,11 @@
+<% if node['cookbook_confluence']['ssl_cert'] != nil && node['cookbook_confluence']['ssl_key'] != nil -%>
+server {
+       listen         80;
+       server_name    <%= node['cookbook_confluence']['hostname'] %>;
+       return         301 https://$server_name$request_uri;
+}
+<% end -%>
+
 server {
 
     server_name <%= node['cookbook_confluence']['hostname'] %>;
@@ -8,6 +16,15 @@ server {
     rewrite_log on;
 
     client_max_body_size 40M;
+
+<% if node['cookbook_confluence']['ssl_cert'] != nil && node['cookbook_confluence']['ssl_key'] != nil -%>
+    ssl on;
+    ssl_certificate     <%= node['cookbook_confluence']['ssl_cert'] %>;
+    ssl_certificate_key <%= node['cookbook_confluence']['ssl_key'] %>;
+    ssl_protocols SSLv3 TLSv1;
+    ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH:!AESGCM;
+    ssl_prefer_server_ciphers on;
+<% end -%>
 
     location / {
         proxy_set_header X-Forwarded-Host $host;
