--- a/templates/default/nginx_vhost.conf.erb
+++ b/templates/default/nginx_vhost.conf.erb
@@ -30,7 +30,11 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        <% if node['cookbook_confluence']['ssl_cert'] != nil && node['cookbook_confluence']['ssl_key'] != nil -%>
+        proxy_pass http://localhost:<%= node['cookbook_confluence']['tomcat']['ssl_port'] %>;
+        <% else -%>
         proxy_pass http://localhost:<%= node['cookbook_confluence']['tomcat']['port'] %>;
+        <% end -%>
     }
 
 }
