--- a/templates/default/setenv.sh.erb
+++ b/templates/default/setenv.sh.erb
@@ -3,7 +3,7 @@
 #  Local modifications will be overwritten by Chef.
 #
 
-JAVA_OPTS="-Xms<%= node['cookbook_confluence']['jvm']['minimum_memory'] %> -Xmx<%= node['cookbook_confluence']['jvm']['maximum_memory'] %> -XX:MaxPermSize=<%= node['cookbook_confluence']['jvm']['maximum_permgen'] %> <%= node['cookbook_confluence']['jvm']['java_opts'] %> $JAVA_OPTS -Djava.awt.headless=true "
+JAVA_OPTS="-Xms<%= node['cookbook_confluence']['jvm']['minimum_memory'] %> -Xmx<%= node['cookbook_confluence']['jvm']['maximum_memory'] %> <%= node['cookbook_confluence']['jvm']['java_opts'] %> $JAVA_OPTS -Djava.awt.headless=true "
 export JAVA_OPTS
 
 echo "If you encounter issues starting up Confluence Standalone, please see the Installation guide at http://confluence.atlassian.com/display/DOC/Confluence+Installation+Guide"
